samples/_failures_safe/1761158503_afe143_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c3ec5e56.c: In function ‘main’:
./samples/SAFE/__tmp_c3ec5e56.c:158:1: error: expected declaration or statement at end of input
  158 | int main(void) {
      | ^~~
